feat: Add dynamic image carousel with configurable content via API.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style-grid.css">
+    <link rel="stylesheet" href="src/css/style-grid.css">
     <link rel="icon" type="image/x-icon" href="src/favicon.ico">
     <title>Task 1</title>
 </head>
+
 <body>
     <main class="container">
         <!-- block 1 (begin) -->
@@ -41,7 +43,19 @@
         <!-- block 4 (end)-->
         <!-- block 5 (begin) -->
         <article class="block">
-            <p>Placeholder</p>
+            <h3>Carousel Configuration</h3>
+            <form id="configForm">
+                <div class="form-group">
+                    <label for="itemCount">Number of Items:</label>
+                    <input type="number" id="itemCount" min="1" max="10" value="6">
+                    <button type="button" id="generateFields">Generate Fields</button>
+                </div>
+                <div id="itemsContainer"></div>
+                <button type="submit" style="margin-top: 10px;">Save Configuration</button>
+            </form>
+            <div id="message"></div>
+
+            <script src="src/js/config.js"></script>
         </article>
         <!-- block 5 (end) -->
         <!-- block 6 (begin) -->
@@ -55,4 +69,5 @@
         <!-- block 6 (end) -->
     </main>
 </body>
+
 </html>
